--- a/top150.ipynb
+++ b/top150.ipynb
@@ -73,6 +73,45 @@
     "            nums1[last] = nums2[n-1]\n",
     "            n, last = n-1, last-1"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 27. Remove Element\n",
+    "\n",
+    "class Solution:\n",
+    "    def removeElement(self, nums: List[int], val: int) -> int:\n",
+    "        k = 0\n",
+    "\n",
+    "        for num in nums:\n",
+    "            if num != val:\n",
+    "                nums[k] = num\n",
+    "                k += 1\n",
+    "\n",
+    "        return k\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 26. Remove Duplicates from Sorted Array\n",
+    "\n",
+    "class Solution:\n",
+    "    def removeDuplicates(self, nums: List[int]) -> int:\n",
+    "        k = 1\n",
+    "        for i in range(1, len(nums)):\n",
+    "            if nums[i] != nums[i - 1]:\n",
+    "                nums[k] = nums[i] \n",
+    "                k += 1  \n",
+    "        \n",
+    "        return k\n"
+   ]
   }
  ],
  "metadata": {
