--- a/top150.ipynb
+++ b/top150.ipynb
@@ -112,6 +112,51 @@
     "        \n",
     "        return k\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'List' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[1], line 4\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;66;03m# 80. Remove Duplicates from Sorted Array II\u001b[39;00m\n\u001b[0;32m      2\u001b[0m \n\u001b[0;32m      3\u001b[0m \u001b[38;5;66;03m#\u001b[39;00m\n\u001b[1;32m----> 4\u001b[0m \u001b[38;5;28;01mclass\u001b[39;00m \u001b[38;5;21;01mSolution\u001b[39;00m:\n\u001b[0;32m      5\u001b[0m     \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mremoveDuplicates\u001b[39m(\u001b[38;5;28mself\u001b[39m, nums: List[\u001b[38;5;28mint\u001b[39m]) \u001b[38;5;241m-\u001b[39m\u001b[38;5;241m>\u001b[39m \u001b[38;5;28mint\u001b[39m:\n\u001b[0;32m      6\u001b[0m         \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mlen\u001b[39m(nums) \u001b[38;5;241m<\u001b[39m \u001b[38;5;241m3\u001b[39m:\n",
+      "Cell \u001b[1;32mIn[1], line 5\u001b[0m, in \u001b[0;36mSolution\u001b[1;34m()\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[38;5;28;01mclass\u001b[39;00m \u001b[38;5;21;01mSolution\u001b[39;00m:\n\u001b[1;32m----> 5\u001b[0m     \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mremoveDuplicates\u001b[39m(\u001b[38;5;28mself\u001b[39m, nums: \u001b[43mList\u001b[49m[\u001b[38;5;28mint\u001b[39m]) \u001b[38;5;241m-\u001b[39m\u001b[38;5;241m>\u001b[39m \u001b[38;5;28mint\u001b[39m:\n\u001b[0;32m      6\u001b[0m         \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mlen\u001b[39m(nums) \u001b[38;5;241m<\u001b[39m \u001b[38;5;241m3\u001b[39m:\n\u001b[0;32m      7\u001b[0m             \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mlen\u001b[39m(nums)\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'List' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "# 80. Remove Duplicates from Sorted Array II\n",
+    "\n",
+    "# Estratégia: Usar um contador de repetidas para rastrear quantas vezes um número consecutivo aparece no array. Se o número aparecer até duas vezes, ele é incluído na posição k do array nums. Quando encontramos um novo número, o contador é resetado para 1. \n",
+    "class Solution:\n",
+    "    def removeDuplicates(self, nums: List[int]) -> int:\n",
+    "        if len(nums) < 3:\n",
+    "            return len(nums)\n",
+    "        \n",
+    "        k = 1  \n",
+    "        count = 1 \n",
+    "        \n",
+    "        for i in range(1, len(nums)):\n",
+    "            if nums[i] == nums[i - 1]:\n",
+    "                count += 1\n",
+    "            else:\n",
+    "                count = 1\n",
+    "            \n",
+    "            if count <= 2:\n",
+    "                nums[k] = nums[i]\n",
+    "                k += 1\n",
+    "\n",
+    "            print(count, k, i, nums)\n",
+    "        \n",
+    "        return k\n"
+   ]
   }
  ],
  "metadata": {
@@ -130,7 +175,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.7"
+   "version": "3.9.9"
   }
  },
  "nbformat": 4,
